2012-11-13  Ian Bolton  <ian.bolton@arm.com>

	Backport from mainline
	2012-11-12  Ian Bolton  <ian.bolton@arm.com>
 
	* config/aarch64/aarch64.md (*compare_neg<mode>): New pattern.

2012-11-08  Yufeng Zhang  <yufeng.zhang@arm.com>

	Revert:
	2012-11-07  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/aarch64/aarch64.c (aarch64_expand_prologue): add the missing
	argument 'Pmode' to the 'plus_constant' call.

2012-11-07  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/aarch64/aarch64.c (aarch64_expand_prologue): add the missing
	argument 'Pmode' to the 'plus_constant' call.

2012-11-07  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/aarch64/aarch64.c (aarch64_expand_prologue): For the
	load-pair with writeback instruction, replace
	aarch64_set_frame_expr with add_reg_note (REG_CFA_ADJUST_CFA);
	add new local variable 'cfa_reg' and use it.

2012-11-03  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2012-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53708
	* tree-vect-data-refs.c (vect_can_force_dr_alignment_p): Preserve
	user-supplied alignment when used with an explicit section name.

2012-11-02  Jeff Law  <law@redhat.com>

	PR tree-optimization/54985
	* tree-ssa-threadedge.c (cond_arg_set_in_bb): New function extracted
	from thread_across_edge.
	(thread_across_edge): Use it in all cases where we might thread
	across a back edge.

2012-10-31  Eric Botcazou  <ebotcazou@adacore.com>

	* config/i386/i386.c (ix86_expand_prologue): Emit frame info for the
	special register pushes before frame probing and allocation.

2012-10-31  Ralf Corsépius  <ralf.corsepius@rtems.org>,
	    Joel Sherrill  <joel.sherrill@oarcorp.com>

	* config/sparc/t-rtems: New (Custom multilibs).
	* config/sparc/t-rtems-64: New (Custom multilibs).
	* config.gcc (sparc64-*-rtems*): Add sparc/t-rtems-64.
	(sparc-*-rtems*): Add sparc/t-rtems.

2012-10-30  Eric Botcazou  <ebotcazou@adacore.com>

	* cse.c (hash_rtx_cb): Replace RTX_UNCHANGING_P with MEM_READONLY_P in