@@ -2,6 +2,13 @@
 
 	Backport from mainline
 	2012-11-12  Ian Bolton  <ian.bolton@arm.com>
+
+	* gcc.target/aarch64/csinc-2.c: New test.
+
+2012-11-13  Ian Bolton  <ian.bolton@arm.com>
+
+	Backport from mainline
+	2012-11-12  Ian Bolton  <ian.bolton@arm.com>
  
 	* gcc.target/aarch64/cmn.c: New test.
 	* gcc.target/aarch64/adds.c: New test.
